# spectral-calc-tests

./: .gitignore  BENCHMARK.md  LICENSE  README.md  run_benchmark.sh  spectra-math-idea.md
bash/: calculate_ndvi.sh
benchmark_reports/: benchmark_2025-03-18_minto.md  benchmark_2025-03-19_minto.md
benchmark_results/: compiler_flags_benchmark.txt
c/: calculate_ndvi.c  compile_and_run.sh  ndvi_calculator
data/: data.md
gdal_calc/: calculate_ndvi.sh
grass/: calculate_ndvi.sh
rust/: Cargo.toml  environment.sh  readme.md  test-chunked-parallel.sh  test-compiler-flags.sh  test-direct.sh  test-fixed-point.sh  test-high-perf.sh  test-whole-image.sh
rust/src/: chunked-parallel-impl.rs  direct-gdal-impl.rs  fixed-point-impl.rs  high-perf-impl.rs  main.rs  main.rs.bak  manual_optimized.rs  whole-image-impl.rs
zig/: build.sh  build.zig  build_and_run.sh  run.sh
zig/src/: empty.c  main.zig
