[package]
name = "geo-spectra-calc"
version = "0.1.0"
edition = "2021"

[dependencies]
gdal = { version = "0.17", features = ["bindgen"] }
gdal-sys = "0.10"
rayon = "1.10.0"
libc = "0.2"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.97"
flume = "0.11.1"
parking_lot = "0.12.3"
itertools = "0.14.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 3 # Use optimization even in debug builds
